[gd_scene load_steps=8 format=3 uid="uid://bugaxh64med6w"]

[ext_resource type="Script" uid="uid://b1peumatx1b7b" path="res://Scenes/farm_slot.gd" id="1_4rob1"]
[ext_resource type="Shader" uid="uid://2vfgwygibjq2" path="res://Scenes/arm_pic.gdshader" id="1_djtgy"]
[ext_resource type="Texture2D" uid="uid://wglmkc4g02dg" path="res://Assets/Background/auth_bg.png" id="2_4rob1"]
[ext_resource type="FontFile" uid="uid://caw5hde3doeyx" path="res://Assets/Fonts/argentum-sans.semibold.ttf" id="3_i4jex"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_irsjt"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.819608, 0.835294, 0.858824, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.0745098)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hq3x"]
bg_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90
corner_detail = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_emope"]
shader = ExtResource("1_djtgy")
shader_parameter/radius_scale = 1.0
shader_parameter/rounded_corner_top_left = true
shader_parameter/rounded_corner_top_right = true
shader_parameter/rounded_corner_bottom_left = true
shader_parameter/rounded_corner_bottom_right = true
shader_parameter/width = 1.0
shader_parameter/height = 1.0

[node name="FarmSlot" type="Control"]
custom_minimum_size = Vector2(248, 248)
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_4rob1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_irsjt")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(225, 225)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -101.0
offset_right = 112.5
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_0hq3x")

[node name="FarmPic" type="TextureRect" parent="Panel/VBoxContainer/Panel"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_emope")
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("2_4rob1")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="FarmName" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("3_i4jex")
theme_override_font_sizes/font_size = 20
text = "UGLY FARM"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="CropType" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("3_i4jex")
theme_override_font_sizes/font_size = 16
text = "Corn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FarmButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="FarmButton" to="." method="_on_farm_button_pressed"]
